giteadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}
  labels:
    template: mysql-persistent-template
    template.openshift.io/template-instance-owner: cf30ddb5-ffa8-4d1c-b7cb-7334d7ecf487
  name: giteadb
  namespace: gitea
spec:
  clusterIP: 172.30.178.47
  clusterIPs:
  - 172.30.178.47
  ports:
  - name: mysql
    port: 3306
  selector:
    name: giteadb
